# MacTutorIndex

./: .gitignore  CLAUDE.md  README.md  app.md  pyproject.toml
app/: .gitignore  index.html  package.json
app/src/: App.tsx  index.css
app/src/components/: Header.tsx
app/src/components/details/: ConnectionDetails.tsx  IdentityCard.tsx
app/src/components/filters/: FilterPanel.tsx  InstitutionFilter.tsx  LocationFilter.tsx  LocationTreeFilter.tsx  MathematicianFilter.tsx  MultiSelectFilter.tsx  ProfessionFilter.tsx  ReligionFilter.tsx  WorkedInFilter.tsx  YearRangeFilter.tsx
app/src/components/graph/: Graph.tsx  SearchBar.tsx
app/src/components/ui/: checkbox.tsx  dialog.tsx  slider.tsx
app/src/hooks/: useFirestore.ts  useGraph.ts
app/src/lib/: firebase.ts  graphUtils.ts  locationUtils.ts  personUtils.ts  textUtils.ts  utils.ts
app/src/pages/: About.tsx  Home.tsx
app/src/types/: index.ts
crawler/: crawler.py  fix_encoding.py
crawler/md/: Aaboe.md  Abbe.md  Abbott.md
parser/: parser-l1.py  parser-l2.py  parser-merge.py  parser.py  query.py
upload/: uploader.py
utils/: llm.py  workers.py
