[project]
name = "mactutorindex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "bs4>=0.0.2",
    "html2text>=2025.4.15",
    "openai>=1.74.0",
    "requests>=2.32.3",
    "tqdm>=4.66.0",
]
